syntax = "proto3";

package scow.clusterops;

import "common/job.proto";

message GetRunningJobsRequest {
  optional string user_id = 1;
  repeated string account_names = 2;
  repeated string job_id_list = 3;
}

message GetRunningJobsReply { repeated common.job.RunningJob jobs = 1; }

message ChangeJobTimeLimitRequest {
  string job_id = 1;
  // 单位：分钟
  int64 delta = 2;
}

// NOT_FOUND: if job_id is not found.
message ChangeJobTimeLimitReply {}

message QueryJobTimeLimitRequest { string job_id = 1; }

// NOT_FOUND: if job_id is not found
message QueryJobTimeLimitReply {
  // 单位：秒
  uint64 limit = 1;
}

service JobService {
  rpc GetRunningJobs(GetRunningJobsRequest) returns (GetRunningJobsReply);
  rpc ChangeJobTimeLimit(ChangeJobTimeLimitRequest)
      returns (ChangeJobTimeLimitReply);
  rpc QueryJobTimeLimit(QueryJobTimeLimitRequest)
      returns (QueryJobTimeLimitReply);
}
